Testing prose.io

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>eddynaert.github.com</title>
 </head>
 <body>
-    <h1>eddynaert.github.com</h1>
+    <h1>eddynaert</h1>
 </body>
 </html>
